--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,18 @@ body {
 .section-title {
     margin: 0;
     margin-bottom: 40px;
+    font-weight: 300;
+    font-size: 36px;
+    line-height: 130%;
+    color: #1c1c1c;
 }
 
 .section-descr {
     margin: 0;
     margin-bottom: 50px;
+    font-size: 16px;
+    line-height: 22px;
+    color: #787878;
 }
 
 .section-offset {
@@ -138,7 +145,7 @@ body {
 .hero {
     padding-top: 100px;
     padding-bottom: 150px;
-    background-image: url('//img/hero-bg.jpg');
+    background-image: url('../img/hero-bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -153,18 +160,50 @@ body {
 .hero-title {
     margin: 0;
     margin-bottom: 25px;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 130%;
 }
 
 .hero-descr {
     margin: 0;
     margin-bottom: 34px;
+    font-size: 16px;
+    line-height: 155%;
+    color: #787878;
+}
+
+.hero-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .hero-btn {
     margin-bottom: 14px;
+    min-width: 250px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 14px;
+}
+
+.hero-secure {
+    font-size: 11px;
+    line-height: 155%;
+    color: #787878;
+    text-transform: uppercase;
+    background-image: url('../img/Vector.svg');
+    background-position: left center;
+    background-size: 14px 17px;
+    background-repeat: no-repeat;
+    padding-left: 30px;
 }
 
 /* services */
+
+.services {
+    border-bottom: 1px solid #dadada;
+}
 
 .services-title {
     text-align: center;
@@ -177,9 +216,10 @@ body {
 .services-item {
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 60px 30px;
     width: 270px;
-    outline: 1px solid coral;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
 }
 
 .services-item:not(:nth-child(4n)) {
@@ -193,11 +233,18 @@ body {
 .services-item-title {
     margin: 0;
     margin-bottom: 15px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 130%;
+    color: #1c1c1c;
 }
 
 .servicees-item-descr {
-   margin: 0;
-   text-align: center; 
+    margin: 0;
+    text-align: center;
+    font-size: 14px;
+    line-height: 150%;
+    color: #787878;
 }
 
 /* articles */
