--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,56 @@ body {
     color: #787878;
 }
 
+/* join-us */
+
+.join-us-title {
+    text-align: center;
+}
+
+.join-us-descr {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.form-input {
+    border: 1px solid #dadada;
+    border-radius: 50px;
+    box-sizing: border-box;
+    padding: 16px 28px;
+    width: 251px;
+    height: 60px;
+}
+
+.form-select {
+    border: 1px solid #dadada;
+    box-sizing: border-box;
+    border-radius: 50px;
+    padding: 16px 28px;
+    width: 251px;
+    height: 60px;
+}
+
+.form-textarea {
+    border: 1px solid #dadada;
+    box-sizing: border-box;
+    border-radius: 20px;
+    resize: none;
+    padding: 16px 28px;
+    width: 100%;
+}
+
+.form-top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-left {
+    width: 50%;
+}
+
+.form-right {
+    width: 50%;
+}
 
 /* footer */
 
