--- a/css/style.css
+++ b/css/style.css
@@ -421,6 +421,10 @@ body {
 
 /* join-us */
 
+.join-us {
+    border-bottom: 1px solid #c4c4c4;
+}
+
 .join-us-title {
     text-align: center;
 }
@@ -428,6 +432,11 @@ body {
 .join-us-descr {
     text-align: center;
     margin-bottom: 30px;
+}
+
+.form {
+    padding-left: 55px;
+    padding-right: 55px;
 }
 
 .form-input {
@@ -455,19 +464,59 @@ body {
     resize: none;
     padding: 16px 28px;
     width: 100%;
+    height: 100%;
+}
+
+.form-bottom {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form-top {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 19px;
 }
 
-.footer-left {
-    width: 50%;
+.form-left {
+    width: 49%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .form-right {
-    width: 50%;
+    width: 49%;
+}
+
+.form-btn {
+    min-width: 230px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 50px;
+    margin-bottom: 9px;
+}
+
+.form-check {
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    color: #787878;
+}
+
+.form-check input {
+    margin-right: 8px;
+}
+
+.form-check a {
+    color: #3172B9;
+    border-bottom: 1px solid #3172B9;
 }
 
 /* footer */
