--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,11 @@ body {
     font-weight: 600;
     color: #1c1c1c;
     font-size: 15px;
+    transition: color .8s ease;
+}
+
+.header-link:hover {
+    color: #3172b9;
 }
 
 .header-container {
@@ -120,6 +125,10 @@ body {
 
 .header-logo {
     margin-right: auto;
+}
+
+.header-logo:focus {
+    outline: 3px solid rgba(0, 0, 255, .3);
 }
 
 .header-nav {
@@ -138,6 +147,16 @@ body {
     background-color: #3172b9;
     color: #fff;
     border-radius: 3px;
+    transition: background-color .8s ease;
+}
+
+.btn:hover {
+    background-color: blue;
+}
+
+.btn:active {
+    transform: translateY(1px);
+    background-color: red;
 }
 
 /* hero */
@@ -220,6 +239,30 @@ body {
     width: 270px;
     border: 1px solid #e4e4e4;
     border-radius: 5px;
+    transition-property: background-color, color;
+    transition-duration: .8s;
+    transition-timing-function: ease;
+}
+
+.services-item:hover {
+    cursor: pointer;
+    background-color: #3172B9;
+}
+
+.services-item:hover .servicees-item-descr {
+    color: white;
+}
+
+.services-item:hover .services-item-title {
+    color: white;
+}
+
+.services-item:hover .services-item-icon path {
+    fill: white;
+}
+
+.services-item-icon path {
+    transition: fill .8s ease;
 }
 
 .services-item:not(:nth-child(4n)) {
@@ -245,6 +288,7 @@ body {
     font-size: 14px;
     line-height: 150%;
     color: #787878;
+    transition: color .8s ease;
 }
 
 /* articles */
